# mimir-source-sdk

./: .gitignore  README.md  pyproject.toml
example/: channel.py  plugin.json
src/mimir_source_sdk/: __init__.py  base.py  images.py  settings.py
