[project]
name = "mimir-source-sdk"
version = "1.0.0"
description = "SDK for building Mimir content source channels"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mimir_source_sdk"]
